Fixes horizontal scrollbar from showing.
BUG=139020


Review URL: https://chromiumcodereview.appspot.com/10870117

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@153725 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 0ede4e52f986ca71d1be886b8807e3fe28b6fa8a

--- a/chrome/browser/resources/print_preview/settings/page_settings.css
+++ b/chrome/browser/resources/print_preview/settings/page_settings.css
@@ -2,11 +2,24 @@
  * Use of this source code is governed by a BSD-style license that can be
  * found in the LICENSE file. */
 
+#page-settings .page-settings-print-pages-div {
+  -webkit-box-align: center;
+  display: -webkit-box;
+}
+
+#page-settings .page-settings-custom-input-wrapper {
+  -webkit-box-flex: 1;
+  -webkit-margin-start: 0.6em;
+  height: 24px;
+  position: relative;
+}
+
+#page-settings .page-settings-custom-input {
+  position: absolute;
+  width: 100%;
+}
+
 #page-settings .page-settings-custom-input.invalid {
   background: rgb(255, 240, 240);
   color: rgb(140, 20, 20);
-}
-
-#page-settings .page-settings-print-pages-div {
-  white-space: nowrap;
 }
